# internet_pet_shop

./: .env.example  README.md  mainWindow.ui  pyproject.toml  sql
client/: app.py  entire.py  mainWindow.py  registration.py
client/design/card/: card.css  card.html
client/design/card/png/: desktop.ini
client/design/cart/: cart.css  cart.html  cart.js
client/design/catalog/: catalog.css  catalog.html  catalog.js
client/design/favorite/: favorite.css  favorite.html  favorite.js
client/design/head/: head.css  head.html
client/design/profile/profile-data/: profile-data.css  profile-data.html
client/design/profile/profile-order/: profile-order.css  profile-order.html
client/design/profile/profile-order/chek/: chek.css  chek.html
client/design/profile/profile-order/gods/: gods.css  gods.html
server/: .env  app.py  index.js  package-lock.json  package.json  sequelize.js  test.http
server/controllers/: Cart.js  Category.js  Product.js  User.js
server/infra/: dependencies.py  productRepo.py  userRepo.py
server/infra/models/: product.py  user.py
server/middleware/: authMiddleware.js
server/models/: Cart.js  Category.js  Product.js  User.js  mapping.js
server/pres/: login.py  product.py  user.py
server/routes/: cart.js  category.js  index.js  product.js  user.js
